z-index fix

--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -126,9 +126,9 @@ section.main.template-dir-feedcontent.template-name-content .container-fluid.fin
     &:before {
         content: "";
         position: absolute;
-        bottom: -6px;
+        bottom: -8px;
         margin: auto;
-        border-width: 0 0 6px 10px;
+        border-width: 0 0 9px 12px;
         border-style: solid;
         border-color: transparent @finna-feedback-background;
     }
