--- a/themes/finna/less/finna/navigation.less
+++ b/themes/finna/less/finna/navigation.less
@@ -603,6 +603,6 @@
 
 header {
   box-shadow: 0 0 3px 3px rgba(0,0,0,0.1);
-  z-index: 2000;
+  z-index: 1020;
   position: relative;
 }
