--- a/themes/finna/less/finna/search.less
+++ b/themes/finna/less/finna/search.less
@@ -807,7 +807,7 @@ mark, .highlight {
     top: 120%;
     transition: top 0.5s ease;
     background: @body-bg;
-    z-index: 2100;
+    z-index: 1030;
     width: 100%;
     height: 100%;
     overflow-y: scroll;
